<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/job_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/hello_world" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/org_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/orgNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/hello_world" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/hello_world" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/min_salary"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/min_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/hello_world" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/max_salary"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/max_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/hello_world" />
    </LinearLayout>


</LinearLayout>